--- a/public/assets/css/plugins/component.css
+++ b/public/assets/css/plugins/component.css
@@ -2,7 +2,7 @@
 	position: relative;
 	font-size: 26px;
 	margin-right: 25px;
-	border-right: 1px solid rgba(0,0,0,0.1);
+	/*border-right: 1px solid rgba(0,0,0,0.1);*/
 	padding: 34px 25px 34px 25px;
 }
 
